--- a/index.html
+++ b/index.html
@@ -1,36 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Image Gallery</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Simple Calculator</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div class="calculator">
+    <input type="text" id="display" disabled />
+    <div class="buttons">
+      <button onclick="clearDisplay()">C</button>
+      <button onclick="deleteChar()">⌫</button>
+      <button onclick="append('/')">÷</button>
+      <button onclick="append('*')">×</button>
 
-  <h1 class="title">Image Gallery</h1>
+      <button onclick="append('7')">7</button>
+      <button onclick="append('8')">8</button>
+      <button onclick="append('9')">9</button>
+      <button onclick="append('-')">−</button>
 
-  <div class="filter-buttons">
-    <button onclick="filterImages('all')">All</button>
-    <button onclick="filterImages('nature')">Nature</button>
-    <button onclick="filterImages('animals')">Animals</button>
-  </div>
+      <button onclick="append('4')">4</button>
+      <button onclick="append('5')">5</button>
+      <button onclick="append('6')">6</button>
+      <button onclick="append('+')">+</button>
 
-  <div class="gallery">
-    <div class="image nature"><img src="images/nature1.jpg" alt="Nature" onclick="openLightbox(0)" /></div>
-    <div class="image animals"><img src="images/animal1.jpg" alt="Animal" onclick="openLightbox(1)" /></div>
-    <div class="image nature"><img src="images/nature2.jpg" alt="Nature" onclick="openLightbox(2)" /></div>
-    <div class="image animals"><img src="images/animal2.jpg" alt="Animal" onclick="openLightbox(3)" /></div>
-    <!-- Add more images -->
-  </div>
+      <button onclick="append('1')">1</button>
+      <button onclick="append('2')">2</button>
+      <button onclick="append('3')">3</button>
+      <button onclick="calculate()">=</button>
 
-  <!-- Lightbox -->
-  <div id="lightbox" class="lightbox">
-    <span class="close" onclick="closeLightbox()">×</span>
-    <img class="lightbox-img" id="lightbox-img" />
-    <div class="navigation">
-      <span class="prev" onclick="changeImage(-1)">❮</span>
-      <span class="next" onclick="changeImage(1)">❯</span>
+      <button onclick="append('0')" class="zero">0</button>
+      <button onclick="append('.')">.</button>
     </div>
   </div>
 
